Setup semantic elements and title

--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
     <link rel="stylesheet" href="css/font-awesome-4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/master.css">
   </head>
-  
+
   <body>
+    <h1 id="title">Developer Survey Form</h1>
+
+    <main>
+      <p id="description">If you are a developer, we'd appreciate if you could fill out this survey!</p>
+    </main>
 
   </body>
 </html>
