--- a/index.html
+++ b/index.html
@@ -21,23 +21,23 @@
       <form id="survey-form" action="#" method="post">
 
         <div class="single-option">
-          <label for="age-input">* Age: </label>
-          <input type="number" id="age-input" min="14" max="110" placeholder="Acceptable age range is 14 to 110." required>
+          <label class="bold" for="age-input">* Age: </label>
+          <input type="number" id="age-input" min="14" max="110" required>
         </div>
 
         <div class="single-option">
-          <label for="name-input">* Name: </label>
+          <label class="bold" for="name-input">* Name: </label>
           <input type="text" id="name-input" placeholder="Please enter your name." required>
         </div>
 
         <div class="single-option">
-          <label for="email-input">* Email: </label>
+          <label class="bold" for="email-input">* Email: </label>
           <input type="email" id="email-input" placeholder="Please enter a valid email address." required>
         </div>
 
         <div class="multiple-options">
-          <div class="">
-            <label for="background">Background Experience: </label>
+          <div>
+            <label class="bold" for="background">Background Experience: </label>
           </div>
           <div class="buttons">
             <label><input type="radio" name="background" checked="checked"> Hobbyist</label>
@@ -46,8 +46,8 @@
         </div>
 
         <div class="multiple-options">
-          <div class="">
-            <label id="years-of-experience">Years of Experience: </label>
+          <div>
+            <label class="bold" id="years-of-experience">Years of Experience: </label>
           </div>
           <div class="buttons">
             <label><input type="radio" name="exp" checked="checked"> Less than 1 year</label>
@@ -60,7 +60,7 @@
 
 
         <div class="single-option">
-          <label for="education-dropdown">Highest Level of Education: </label>
+          <label class="bold" for="education-dropdown">Highest Level of Education: </label>
           <select name="dropdown" id="education-dropdown">
             <option value="Self taught">Self taught</option>
             <option value="Certificate">Certificate</option>
@@ -74,18 +74,18 @@
         </div>
 
         <div class="single-option">
-          <label for="salary-input">Approx Annual Salary: </label>
+          <label class="bold" for="salary-input">Approx Annual Salary: </label>
           <input type="number" id="salary-input" min="0" placeholder="Not required.">
         </div>
 
         <div class="single-option">
-          <label for="technologies-textarea">What are your favorite technologies? </label>
+          <label  class="bold" for="technologies-textarea">What are your favorite technologies? </label>
           <textarea id="technologies-textarea" placeholder="i.e. JavaScript, NodeJS, React, C#, Lisp, Python, Django, Go..."></textarea>
         </div>
 
         <div class="multiple-options">
-          <div class="">
-            <label for="coffee">How do you drink your coffee? Check all that apply!</label>
+          <div>
+            <label class="bold" for="coffee">How do you drink your coffee? Check all that apply!</label>
           </div>
           <div class="buttons">
             <label><input type="checkbox" name="coffee"> Black</label>
