--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
       <form id="survey-form" action="#" method="post">
 
-        <div class="input">
+        <div class="input" id="first-form-element">
           <label class="bold" for="name-input">* Name: </label>
           <input type="text" id="name-input" placeholder="Please enter your name." required>
         </div>
@@ -35,7 +35,7 @@
           <input type="email" id="email-input" placeholder="Please enter a valid email address." required>
         </div>
 
-        <div class="radio-check-input">
+        <div class="radio-check-input experience">
           <div>
             <label class="bold" for="background">Background Experience: </label>
           </div>
@@ -45,9 +45,9 @@
           </div>
         </div>
 
-        <div class="radio-check-input">
+        <div class="radio-check-input experience">
           <div>
-            <label class="bold" id="years-of-experience">Years of Experience: </label>
+            <label class="bold" for="exp">Years of Experience: </label>
           </div>
           <div class="buttons">
             <label><input type="radio" name="exp" checked="checked"> Less than 1 year</label>
