Fixed html validation errors

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/font-awesome-4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/master.css">
-    <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,500,700" rel="stylesheet">
   </head>
 
   <body>
@@ -37,7 +37,7 @@
 
         <div class="radio-check-input experience">
           <div>
-            <label class="bold" for="background">Background Experience: </label>
+            <label class="bold">Background Experience: </label>
           </div>
           <div class="buttons">
             <label><input type="radio" name="background" checked="checked"> Hobbyist</label>
@@ -47,7 +47,7 @@
 
         <div class="radio-check-input experience">
           <div>
-            <label class="bold" for="exp">Years of Experience: </label>
+            <label class="bold">Years of Experience: </label>
           </div>
           <div class="buttons">
             <label><input type="radio" name="exp" checked="checked"> Less than 1 year</label>
@@ -85,7 +85,7 @@
 
         <div class="radio-check-input">
           <div>
-            <label class="bold" for="coffee">How do you drink your coffee? Check all that apply!</label>
+            <label class="bold coffee">How do you drink your coffee? Check all that apply!</label>
           </div>
           <div class="buttons">
             <label><input type="checkbox" name="coffee"> Black</label>
@@ -96,7 +96,7 @@
             <label><input type="checkbox" name="coffee"> Soy Milk</label>
             <label><input type="checkbox" name="coffee"> Sugar</label>
             <label><input type="checkbox" name="coffee"> Sugar substitute</label>
-            <label><input type="checkbox" name="coffee"> Flavors (i.e. Hazelnut, French Vanilla etc.)</label>
+            <label><input type="checkbox" name="coffee"> Flavors (i.e. French Vanilla)</label>
           </div>
         </div>
 
