Deleted redundant fcc test suite requirements

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Developer Survey Form</title>
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/font-awesome-4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/master.css">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,500,700" rel="stylesheet">
   </head>
@@ -21,18 +20,18 @@
       <form id="survey-form" action="#" method="post">
 
         <div class="input" id="first-form-element">
-          <label class="bold" for="name-input">* Name: </label>
-          <input type="text" id="name-input" placeholder="Please enter your name." required>
+          <label class="bold">* Name: </label>
+          <input type="text" placeholder="Please enter your name." required>
         </div>
 
         <div class="input">
-          <label class="bold" for="age-input">* Age: </label>
-          <input type="number" id="age-input" min="14" max="110" placeholder="Please enter your age." required>
+          <label class="bold">* Age: </label>
+          <input type="number" min="14" max="110" placeholder="Please enter your age." required>
         </div>
 
         <div class="input">
-          <label class="bold" for="email-input">* Email: </label>
-          <input type="email" id="email-input" placeholder="Please enter a valid email address." required>
+          <label class="bold">* Email: </label>
+          <input type="email" placeholder="Please enter a valid email address." required>
         </div>
 
         <div class="radio-check-input experience">
@@ -60,8 +59,8 @@
 
 
         <div class="input">
-          <label class="bold" for="education-dropdown">Highest Level of Education: </label>
-          <select name="dropdown" id="education-dropdown">
+          <label class="bold">Highest Level of Education: </label>
+          <select name="dropdown">
             <option value="Self taught">Self taught</option>
             <option value="Certificate">Certificate</option>
             <option value="Bootcamp">Bootcamp</option>
@@ -74,13 +73,13 @@
         </div>
 
         <div class="input">
-          <label class="bold" for="salary-input">Approx Annual Salary: </label>
-          <input type="number" id="salary-input" min="0" placeholder="Not required.">
+          <label class="bold">Approx Annual Salary: </label>
+          <input type="number" min="0" placeholder="Not required.">
         </div>
 
         <div class="input">
-          <label  class="bold" for="technologies-textarea">What are your favorite technologies? </label>
-          <textarea id="technologies-textarea" placeholder="i.e. JavaScript, NodeJS, React, C#, Lisp, Python, Django, Go..."></textarea>
+          <label  class="bold">What are your favorite technologies? </label>
+          <textarea placeholder="i.e. JavaScript, NodeJS, React, C#, Lisp, Python, Django, Go..."></textarea>
         </div>
 
         <div class="radio-check-input">
