--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Developer Survey Form</title>
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/font-awesome-4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/master.css">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,500,700" rel="stylesheet">
   </head>
@@ -21,18 +20,18 @@
       <form id="survey-form" action="#" method="post">
 
         <div class="input" id="first-form-element">
-          <label class="bold" for="name-input">* Name: </label>
-          <input type="text" id="name-input" placeholder="Please enter your name." required>
+          <label class="bold" for="name" id="name-label">* Name: </label>
+          <input type="text" id="name" placeholder="Please enter your name." required>
         </div>
 
         <div class="input">
-          <label class="bold" for="age-input">* Age: </label>
-          <input type="number" id="age-input" min="14" max="110" placeholder="Please enter your age." required>
+          <label class="bold" for="number" id="number-label">* Age: </label>
+          <input type="number" id="number" min="14" max="110" placeholder="Please enter your age." required>
         </div>
 
         <div class="input">
-          <label class="bold" for="email-input">* Email: </label>
-          <input type="email" id="email-input" placeholder="Please enter a valid email address." required>
+          <label class="bold" for="email" id="email-label">* Email: </label>
+          <input type="email" id="email" placeholder="Please enter a valid email address." required>
         </div>
 
         <div class="radio-check-input experience">
@@ -40,8 +39,8 @@
             <label class="bold">Background Experience: </label>
           </div>
           <div class="buttons">
-            <label><input type="radio" name="background" checked="checked"> Hobbyist</label>
-            <label><input type="radio" name="background"> Professional</label>
+            <label><input type="radio" name="background" value="Hobbyist" checked="checked"> Hobbyist</label>
+            <label><input type="radio" name="background" value="Professional"> Professional</label>
           </div>
         </div>
 
@@ -50,18 +49,18 @@
             <label class="bold">Years of Experience: </label>
           </div>
           <div class="buttons">
-            <label><input type="radio" name="exp" checked="checked"> Less than 1 year</label>
-            <label><input type="radio" name="exp"> 1-2 years</label>
-            <label><input type="radio" name="exp"> 2-5 years</label>
-            <label><input type="radio" name="exp"> 6-10 years</label>
-            <label><input type="radio" name="exp"> More than 11 years</label>
+            <label><input type="radio" name="exp" value="Less than 1 year" checked="checked"> Less than 1 year</label>
+            <label><input type="radio" name="exp" value="1-2 years"> 1-2 years</label>
+            <label><input type="radio" name="exp" value="2-5 years"> 2-5 years</label>
+            <label><input type="radio" name="exp" value="6-10 years"> 6-10 years</label>
+            <label><input type="radio" name="exp" value="More than 11 years"> More than 11 years</label>
           </div>
         </div>
 
 
         <div class="input">
-          <label class="bold" for="education-dropdown">Highest Level of Education: </label>
-          <select name="dropdown" id="education-dropdown">
+          <label class="bold" for="dropdown">Highest Level of Education: </label>
+          <select name="dropdown" id="dropdown">
             <option value="Self taught">Self taught</option>
             <option value="Certificate">Certificate</option>
             <option value="Bootcamp">Bootcamp</option>
@@ -88,15 +87,15 @@
             <label class="bold coffee">How do you drink your coffee? Check all that apply!</label>
           </div>
           <div class="buttons">
-            <label><input type="checkbox" name="coffee"> Black</label>
-            <label><input type="checkbox" name="coffee"> Cream</label>
-            <label><input type="checkbox" name="coffee"> Milk</label>
-            <label><input type="checkbox" name="coffee"> Coconut Milk</label>
-            <label><input type="checkbox" name="coffee"> Almond Milk</label>
-            <label><input type="checkbox" name="coffee"> Soy Milk</label>
-            <label><input type="checkbox" name="coffee"> Sugar</label>
-            <label><input type="checkbox" name="coffee"> Sugar substitute</label>
-            <label><input type="checkbox" name="coffee"> Flavors (i.e. French Vanilla)</label>
+            <label><input type="checkbox" value="Black"> Black</label>
+            <label><input type="checkbox" value="Cream"> Cream</label>
+            <label><input type="checkbox" value="Milk"> Milk</label>
+            <label><input type="checkbox" value="Coconut Milk"> Coconut Milk</label>
+            <label><input type="checkbox" value="Almond Milk"> Almond Milk</label>
+            <label><input type="checkbox" value="Soy Milk"> Soy Milk</label>
+            <label><input type="checkbox" value="Sugar"> Sugar</label>
+            <label><input type="checkbox" value="Sugar Substitute"> Sugar Substitute</label>
+            <label><input type="checkbox" value="Black"> Flavors (i.e. French Vanilla)</label>
           </div>
         </div>
 
